adding alias field on floors table, also migrations were updated
